@@ -24,7 +24,7 @@ public class AboutDialog extends JDialog
     JEditorPane jEditorPaneAbout      		= new JEditorPane();
     JButton     jButtonOk             		= new JButton();
     JTextField  jTextFieldApplication 		= new JTextField();
-    static JTextField  jTextFieldVersion	= new JTextField("V01-05-86"); 			// ConfDb Version.
+    static JTextField  jTextFieldVersion	= new JTextField("V01-05-87"); 			// ConfDb Version.
     static String		contactEmail		= "raul.jimenez.estupinan@cern.ch";		// Contact person.
     
     
