@@ -1,4 +1,8 @@
 2011-11-28 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
+	* tag V01-05-87
+	* Documentation fields autosave when clicking the tree. (bug 75959).
+	
+2011-11-28 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
 	* tag V01-05-86
 	* Improve documentation fields panel. (bug 75959).
 	
